--- a/index.html
+++ b/index.html
@@ -2228,7 +2228,7 @@
         <li class="page-item disabled">
           <a class="page-link" id="prev-l" href="#">Назад</a>
         </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2/">1</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2a/">2</a></li>
         <li class="page-item"><a class="page-link" href="#">3</a></li>
         <li class="page-item"><a class="page-link" href="#">...</a></li>
