--- a/index.html
+++ b/index.html
@@ -2230,10 +2230,12 @@
         </li>
         <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2/">1</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2a/">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2b/">3</a></li>
+        <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2c/">4</a></li>
         <li class="page-item"><a class="page-link" href="#">...</a></li>
-        <li class="page-item"><a class="page-link" href="#">6</a></li>
-        <li class="page-item"><a class="page-link" href="#">7</a></li>
+        <li class="page-item"><a class="page-link" href="#">8</a></li>
+        <li class="page-item"><a class="page-link" href="#">...</a></li>
+        <li class="page-item"><a class="page-link" href="#">10</a></li>
         <li class="page-item">
           <a class="page-link" id="next-l" href="#">Вперед</a>
         </li>
