--- a/index.html
+++ b/index.html
@@ -2226,9 +2226,9 @@
     <nav class="pag-nav" aria-label="Page navigation example">
       <ul class="pag-menu pagination justify-content-end">
         <li class="page-item disabled">
-          <a class="page-link" id="prev-l" href="#">Назад</a>
+          <a class="page-link" id="prev-l" href="https://kateonishchuk.github.io/dance_nl_website/">Назад</a>
         </li>
-        <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2/">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2a/">2</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2b/">3</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2c/">4</a></li>
@@ -2237,7 +2237,7 @@
         <li class="page-item"><a class="page-link" href="#">...</a></li>
         <li class="page-item"><a class="page-link" href="#">10</a></li>
         <li class="page-item">
-          <a class="page-link" id="next-l" href="#">Вперед</a>
+          <a class="page-link" id="next-l" href="https://kateonishchuk.github.io/dance_nl_website2a/">Вперед</a>
         </li>
       </ul>
     </nav>
