--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
-                <li><a class="active" href="#dashboard"><i class="fas fa-house-user"></i> Головна</a></li>
+                <li><a class="active" href="https://kateonyshchuk.github.io/dance_nl_website/"><i class="fas fa-house-user"></i> Головна</a></li>
                 <li><a href="#income"><i class="fab fa-black-tie"></i> Асортимент</a></li>
                 <li><a href="#featured"><i class="fab fa-atlassian"></i> Події</a></li>
                 <li><a href="#gallery"><i class="fas fa-camera-retro"></i> Фотогалерея</a></li>
@@ -2226,17 +2226,17 @@
     <nav class="pag-nav" aria-label="Page navigation example">
       <ul class="pag-menu pagination justify-content-end">
         <li class="page-item disabled">
-          <a class="page-link" id="prev-l" href="https://kateonishchuk.github.io/dance_nl_website/">Назад</a>
+          <a class="page-link" id="prev-l" href="https://kateonishchuk.github.io/dance_nl_website2/">Назад</a>
         </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="https://kateonyshchuk.github.io/dance_nl_website2/">1</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2a/">2</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2b/">3</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2c/">4</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2d/">5</a></li>
         <li class="page-item"><a class="page-link" href="#">...</a></li>
-        <li class="page-item"><a class="page-link" href="#">8</a></li>
+        <li class="page-item"><a class="page-link" href="https://kateonyshchuk.github.io/dance_nl_website2h/">8</a></li>
         <li class="page-item"><a class="page-link" href="#">...</a></li>
-        <li class="page-item"><a class="page-link" href="#">10</a></li>
+        <li class="page-item"><a class="page-link" href="https://kateonyshchuk.github.io/dance_nl_website2j/">10</a></li>
         <li class="page-item">
           <a class="page-link" id="next-l" href="https://kateonishchuk.github.io/dance_nl_website2a/">Вперед</a>
         </li>
