--- a/index.html
+++ b/index.html
@@ -2226,19 +2226,19 @@
     <nav class="pag-nav" aria-label="Page navigation example">
       <ul class="pag-menu pagination justify-content-end">
         <li class="page-item disabled">
-          <a class="page-link" id="prev-l" href="https://kateonishchuk.github.io/dance_nl_website2/">Назад</a>
+          <a class="page-link" id="prev-l" href="https://kateonyshchuk.github.io/dance_nl_website2/">Назад</a>
         </li>
         <li class="page-item"><a class="page-link" href="https://kateonyshchuk.github.io/dance_nl_website2/">1</a></li>
-        <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2a/">2</a></li>
-        <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2b/">3</a></li>
-        <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2c/">4</a></li>
-        <li class="page-item"><a class="page-link" href="https://kateonishchuk.github.io/dance_nl_website2d/">5</a></li>
+        <li class="page-item"><a class="page-link" href="https://kateonyshchuk.github.io/dance_nl_website2a/">2</a></li>
+        <li class="page-item"><a class="page-link" href="https://kateonyshchuk.github.io/dance_nl_website2b/">3</a></li>
+        <li class="page-item"><a class="page-link" href="https://kateonyshchuk.github.io/dance_nl_website2c/">4</a></li>
+        <li class="page-item"><a class="page-link" href="https://kateonyshchuk.github.io/dance_nl_website2d/">5</a></li>
         <li class="page-item"><a class="page-link" href="#">...</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonyshchuk.github.io/dance_nl_website2h/">8</a></li>
         <li class="page-item"><a class="page-link" href="#">...</a></li>
         <li class="page-item"><a class="page-link" href="https://kateonyshchuk.github.io/dance_nl_website2j/">10</a></li>
         <li class="page-item">
-          <a class="page-link" id="next-l" href="https://kateonishchuk.github.io/dance_nl_website2a/">Вперед</a>
+          <a class="page-link" id="next-l" href="https://kateonyshchuk.github.io/dance_nl_website2a/">Вперед</a>
         </li>
       </ul>
     </nav>
